# ChangeLog for dev-perl/Bio-Das
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Bio-Das/ChangeLog,v 1.33 2012/06/24 12:59:50 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Bio-Das-1.17.ebuild:
  Cleanup

*Bio-Das-1.170.0 (01 Sep 2011)

  01 Sep 2011; Torsten Veller <tove@gentoo.org> +Bio-Das-1.170.0.ebuild:
  Change version scheme

  24 Apr 2011; Raúl Porcel <armin76@gentoo.org> Bio-Das-1.17.ebuild:
  Drop ia64/sparc keyword

  20 Oct 2010; Torsten Veller <tove@gentoo.org> -Bio-Das-1.14.ebuild,
  -Bio-Das-1.15.ebuild:
  Cleanup

*Bio-Das-1.17 (16 Jul 2010)

  16 Jul 2010; Torsten Veller <tove@gentoo.org> +Bio-Das-1.17.ebuild:
  Version bump

*Bio-Das-1.15 (22 Jun 2010)

  22 Jun 2010; Torsten Veller <tove@gentoo.org> +Bio-Das-1.15.ebuild:
  Version bump

  03 Apr 2010; Torsten Veller <tove@gentoo.org> Bio-Das-1.14.ebuild:
  Disable online tests (#312781)

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -Bio-Das-1.10.ebuild,
  -Bio-Das-1.11.ebuild, -Bio-Das-1.12.ebuild:
  Cleanup

*Bio-Das-1.14 (05 Sep 2009)

  05 Sep 2009; Torsten Veller <tove@gentoo.org> +Bio-Das-1.14.ebuild:
  Version bump

*Bio-Das-1.12 (28 Aug 2009)

  28 Aug 2009; Torsten Veller <tove@gentoo.org> +Bio-Das-1.12.ebuild:
  Version bump

  19 Jul 2009; Torsten Veller <tove@gentoo.org> Bio-Das-1.10.ebuild,
  Bio-Das-1.11.ebuild:
  IO-Compress replaces Compress-Zlib

*Bio-Das-1.11 (07 Jun 2009)

  07 Jun 2009; Torsten Veller <tove@gentoo.org> +Bio-Das-1.11.ebuild,
  metadata.xml:
  Version bump. Add perl herd to metadata

  30 Dec 2008; Torsten Veller <tove@gentoo.org> -Bio-Das-1.02.ebuild,
  -Bio-Das-1.03.ebuild, -Bio-Das-1.09.ebuild:
  Cleanup

*Bio-Das-1.10 (23 Dec 2008)

  23 Dec 2008; Robin H. Johnson <robbat2@gentoo.org> +Bio-Das-1.10.ebuild:
  Version bump.

*Bio-Das-1.09 (23 Dec 2008)
