@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Bio-Das/Bio-Das-1.170.0.ebuild,v 1.1 2011/09/01 13:03:54 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Bio-Das/Bio-Das-1.170.0.ebuild,v 1.2 2012/12/20 17:34:09 jlec Exp $
 
 EAPI=4
 
@@ -12,7 +12,7 @@ DESCRIPTION="Interface to Distributed Annotation System"
 
 LICENSE="Artistic"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~x86"
 IUSE=""
 
 DEPEND=">=virtual/perl-IO-Compress-1.0
