@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Bio-Das-1.17.tar.gz 105270 SHA256 cfe4980e47021e69ae3ba26c88dde29aef10f934f5ca10e9ffd1a99b472792f7 SHA512 c44d3571f4f4c777d8315db19cf704cc5ff4d48a8edae8b9a43f7d47df709bee476d810ce1e96bec5ccf44b7cf3373f79b892c0a1d17715f19ffdff81558292e WHIRLPOOL e440e5aa5918252fe50d5d0e72121f309137e26df4eb011ed49f83d5a18d50f63c856ca9774c867085a4a05daf3051e7d88f4e9743a106c97b8da6fc1091399d
-EBUILD Bio-Das-1.170.0.ebuild 593 SHA256 89bc482c15efd043731b5d547bc94819f64cad2d6baedf1aea329790944393d0 SHA512 3e392d0aea132b3bcfe9078bee19bcc2054b6290724253ec191482ff28193a4e9f85b9691dedb77dabb64f01e8395b9a9e044ae17562a9102661346cd659e73e WHIRLPOOL c7d2405a0e9844be681f4f59b6fdb216896f197bb14ad03359473a322cb14be00b31fce11da046b55f82e76fc6ea9da4369ee2cc919d717cb70d27281ce635a6
-MISC ChangeLog 3935 SHA256 2cb292e14363c9dc2c4791daf3abd0bcbbc516815a1a1163da543a1483c2db7b SHA512 db092378add661dd3ec876a48d2d36bf96f312bf341f70837f17a219fb628b38c9d5f158251ca6ea52ad435319f0ecfa0a663a68607b986dbec37ce33fe17076 WHIRLPOOL f596cd17bef09c245f07cc71e0ec8a6b65f26904db27100185f7dd71f7009faad2d55b9085e3f4ebe5a1fa54541aea26af6bdb81fd3ff5673b5dc1ed58c6d5da
+EBUILD Bio-Das-1.170.0.ebuild 588 SHA256 6aa9fa6db2886a27026675f88ae363d1cedca25d65a013a722a512cea31d255b SHA512 b606e1a589934c6d16ac5216ca2e9ffbbeca037f89fbc84a042b41df618db63a33959a131a160e1677d721e7270e6a41d6f49935fc8f3f6c7c249d30c51d685a WHIRLPOOL 410940c19dea6d96abae45ad8a8c3bdd286a60f6dfc2b48282c60358989bd6c92ed7ff74ac93993d5afb33794dccdcd4407af5ad664087934e77b079a65a316c
+MISC ChangeLog 4073 SHA256 3623749f34ff5a178484df5988965a13e9094c40b438100a7a0927cd90bab4ea SHA512 e594caacc92aa6d5961f0e97233d80c2a2605dc81c6b31fd86a3623918543ab854603fc933307a5cec265f5a32d36e224529fee6f3ca12e4dba1af86b4c6926e WHIRLPOOL 596ef33ce99832ca5572d4f03f26f98a8d787ee0b10dcfe7562fed40fb18a6becf0a776280ae90953e89e608a35d4ed3d2aeac0e07193720b6a3bb8264836921
 MISC metadata.xml 2087 SHA256 4744f467e687bc2dfb24d05eab05a83279a66c80c051ff81a3a7b16e9e91d5f0 SHA512 e52503277f6cd70e2d52483e3486d64c4c1436d821df1bb3918b9999109b06807979749dabb4c98584c4886211988d425dadb3bc26a3faed0ac1035fc1f43c79 WHIRLPOOL 8fd143f15507e2134b25ebd30ffc24ae280b7022fae38ea321e47e4664bf50a42cdc699686c72dd2cbb423ecfce058c2bf603e78bfe1b315eaed8e2560a4315c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlDTTBIACgkQgAnW8HDreRbq5QCggiMdu882h0aKksy8JjmfLTID
++e0AoIVxG1cu29FbLWk8PjeF6670TsKi
+=+oMl
+-----END PGP SIGNATURE-----
