@@ -4,24 +4,24 @@ Hash: SHA256
 AUX cyrus-imap-admin-2.4.10-ldflags.patch 2168 SHA256 1ff6c9141c4e332dec5784a5516390af7cd2f9859f7844878be081cb95b07dfc SHA512 b9799b47b528e577e7a5341de6f1f5bdba8227e3644458524b41141a2ecb3c3c4108342e085f2e03084d6d8e958542d29049599dd18ba3036c9b1edbc3f2d061 WHIRLPOOL c6ae3c715c2034d9bb87ffb0653e131194ef2cb8c402327a791cf5428637709d9058a0906d93aa1d6aa9c9759a4f22094db79b4cf261316bf5d72d59b0c62895
 DIST cyrus-imapd-2.4.16.tar.gz 2484201 SHA256 beac9d6059680bbf65948db60a30c6e8f59786df4a7821c70dc27b2a225f32c4
 DIST cyrus-imapd-2.4.17.tar.gz 2486355 SHA256 b3e30052c764ee7163947ffde27bdd58bd4dd2e5697ad144491941e46300a583 SHA512 86ffe1664ca3c3df164ed8fca21cc08ddae12380e1485deccec7da4ec263d8b953a806e05f0b10f6fb7717a0d40fc05669792b77cc66d7c5067061c8506e59ee WHIRLPOOL 22566578217a5901793b886ff020aa1deecbb81bf85f54a524b58de129029e51b0aa358db902a2139584d05f668404cb98ca2ff3fa33803ce986e07b95c69c45
-EBUILD cyrus-imap-admin-2.4.16.ebuild 1500 SHA256 4fe07c617f2b051e3c9160923506102d003c2607ef1b6a0d64edd56edb1787be SHA512 1dafb975ce7cde7c1a343fc96e7ab203923b9f17bd6630801adf674e66cc0ee473f2aadeb4977acaca1a6b10c2b4a6647686444286cbacf44906bf35c7b61696 WHIRLPOOL 4fc6983d9762992f5a72d335e3de72da8eaeb8b3f2a5a0b542b2ddfdeacba54362d0a86f4b43241be2025566a8857cb7c3405e1e051e53a0fc11eb0b86155938
-EBUILD cyrus-imap-admin-2.4.17.ebuild 1503 SHA256 48d943dcbc1f42784bddb0666ef1c5552b2ec4da9d29b77479a6a906f6241d3d SHA512 f7887db8dc8bf4032976fefef6935baaef0bf7f25665dbf3063f4902951da732132b5842a223383953bf60af29c78a44347274f3c090fef9be1940cdd5c0c1d8 WHIRLPOOL 8916a5643f1f9a9ee5a5642a5ddd80df407efecdb11c595f9db3252fb418055d40e6ce09f956f823c35a1bbf6d0ae978237c84e20aaab3794ec6c3e14059898c
-MISC ChangeLog 17980 SHA256 9902d1156e6906385714397cf3f5419735d2bf78bf89406585b6c8a6c74fe4ab SHA512 349b4451acb936d6f12cbed800bb1fdaddbd2f23beff02102f4ec2693bc04d8bbe5b0241bcd1c19232ac8a829ac16c58301ecfa5e4f96e59bf4969f7673d5dab WHIRLPOOL b4f594144c9509fb10b83c755c4245b279b8a82bfb07e5139573d16734a62b7399fe9673d48207197374594a2296f83a77d35232505bff4f50990b56cba8fd20
+EBUILD cyrus-imap-admin-2.4.16.ebuild 1512 SHA256 6282c49b3c6cd488e6733d14f5edb620dc710743b98762d3f9028a6d7d8d93c4 SHA512 3e714bef9ea67919771699105e3067e1bb5205552c2974216051c07214a81e1548db9332fb8375566379832a6d0a30a25f616e331b4060a23cb963e36eaef032 WHIRLPOOL 9f97b954cafdd4f382a566571c610ca8e8837fa2c809fa50622ee089c7bf91775e352fab63d49ae1894a4d50c69bd90cefa63f0e25e1739bf5d28eeb229b7c65
+EBUILD cyrus-imap-admin-2.4.17.ebuild 1518 SHA256 9a55623cc5e109a5a3afda765646d6e489a76a7f6a5fd6e10764ab84d35d3f22 SHA512 d593e2da031b0e24f67245d0bc47b3c3f03c6b831feaed91af4ff57f79c714a543421040d6b1e3a536457a969d31d0a24e873603a2e843f967385375b994d167 WHIRLPOOL 2634c22f3d8b47fbf21304ee7fe257a61a03813735159d56605f52a7e16f33e9005fd74947ec46aa6596f3df4814cd7e0d897cfba3ed6070e2e01e9538c0fe58
+MISC ChangeLog 18119 SHA256 a6d1ffac3f84f021e00206f4102e671d45459b5aedea0061b6fe05ae786701a7 SHA512 a1e54329f7e7a64fe53ad1d0c51863f8ea80ee514fc2ea832c15dcb2dc7a164a33907697b85979dd13f63039a1158e5e141c9dbf2d16153fa4bfe6ecaaa69616 WHIRLPOOL e01104e17090ad05edaa5082ad543e61c198c3b014b09fbf3e05dfb2fbd69fa2d68ddec7c492113f19b6e2da630141424bb1a7e3d61f1e963e5ee1eb51d395fa
 MISC metadata.xml 161 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32 SHA512 77001eed8032a3b919c30d8dd9314951d3471528e770ef5ad840060e217037f5e1f0eb2cf4c5f90cb2d58e9598c8a38619a1301f890d6dd734900ab6273fb6ec WHIRLPOOL 0d251627fdbf63b5c090313d5bbf3e45acf630331742dc930a0136cc382b7720fe4099c64fd439fd31fe0eed48a4199d6e31692dbdedd34f803f9e2567d46975
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQwKXEAAoJEHfx8XVYajsfcr0P/i1/iEbuMRoEcSLLHd68qTk2
-Xzyi5OU9BUk5m9V/R7MYXU1xOlsQodunjDa97X2J3xs8a4m1St8RAbomPbMyF3eC
-fwH/eN/wI4/ZaGMvfPRfq9hiionKH8pOXgPMUbhdsXu8zU0mPvvx19ZSMwkeOlQp
-BRil4LosRLr2hHBJJLlIE4gLu/W5p4roTDKFs4WxuCldnjbhI/KI1FavXAXiL78O
-abSCPnRg5AnVnfkkH/0019f26CQfUSN2lAL+CQLLWSEw+2VSDjpExiu6QjB7gSyy
-ZmJ/Jy8VZkH/K1D5vXMH8G9Uq/Qu7HQsjeNfBl15PR78nObPXsoX0EkP8MWHc/2v
-D3pf6GEtbrUJJ7FbTmiVmVxah1wW1VYwbiAf6uoMKoZn6geJkVHnvmwk98pK7gDN
-xK0dpU7Cb9i8dYWAjI01vZZRYFmD0P/Cy5HO++kZFIfZp516mlG2HoKNiQEs1Q8p
-MEAURf7TkHHX0oaAUwbEh1xWbXmXvjrAKLxKHT42xoGgN3noIAQ0pl5OLC41oR9J
-xoUIKW51HZMAzJ2ZILyMCRt6NpJDTsMQOTQPfL182XQULldbLXVmL9f7nDt5HD5G
-UtBzR2SKFdGAGyjx1O0kDVw6y4uhlj8qywZritFgbT3Zawnkq0WWuaQLdh7+9rwF
-Mjp7HLXHY2AyzsU9WTrq
-=XqGw
+iQIcBAEBCAAGBQJQ1GLmAAoJEHfx8XVYajsfSgsP/2EobGEgA4kcZ83BIoprJkAa
++EjXKxWmSgT/JPUKAszzm3f13vLyBfZ0nDGGfJpn1aElqNQFr4m8pzlSkLn5EFWP
++rw1npoN0iyucXShx02PEpgrQbFP3cbYXb2JtfCkdWoQo7CalSoWw3p9FtSwouaf
+OB0l+9koDI6gXiNHQ6Nzm/SC6CwKfkKnlc0AQx7TWZaVMIow+NhFOBQXyGhaCGy3
+4Hkl00IDOIJ+uyWI6b9s8Vzps/1qas7EpoRNOoqtaUXaiSyD0IVXyH+KE3FEkWTQ
++bMZ9lQRBc1TQV9RrATyEnBntAzeqQ3MIq1GqgFD59q1sbTiB1zXm7drf4ZczYOm
+vdCoEYw3dr2IUR0SIFDIWgDLA0JnE6Zc644tg287aZabznW02mnwoBEJ2lVridfY
+kYzRrZN3/S/32J+a93S71kqTRKj+HbjmoRx52Do50+IjHXYmzYc2/ZeJOoNk7BnB
+e6XcforCR0fMAER2J35j7l3/Xa8Utav6EX+mhSBOaHaJPU2L/KvFVEprKCVHwxgj
+Ntj6E5ZIFHAmKy6BvcnYL7HTzrzojsap9w0DmrpQZstT3BruJ+QBMSrXkmkRe9/o
+2PWe+goAjB9UDme5xrwqNrxq3QDjJaTajcMJjBWjLFLMNeRNC4HoOkpFsdNA456Y
+BC3WRe2OsH5DgHtc+SCh
+=EnKW
 -----END PGP SIGNATURE-----
