@@ -1,5 +1,5 @@
 AUX nginx.conf 1358 SHA256 6ff6c9301ea2a4d74a335b9119d7f9dba87d4e83793cf22d837d49f061763096 SHA512 1873c9e54ea5020160c86da3f300e3eac589c0d30cdbe3446476b5b3f5bd388da95224cfb1a020b41720c9ce55ab6bb945dcc41612d5850da0e2ae0ceeeaa587 WHIRLPOOL 7672245bd11d6ed987e13d6bfe4dbc2140cc3d2e22616c49ab7ed5f42135c96b5779e4dfd16ba9e2d82aa59d98cd56a4872d18c3774e357ef79385fc874387d2
-AUX nginx.initd 2146 SHA256 29c05bf9d5248275c667a22e674bc186d650fd17de6476ae0fab158a6420f309 SHA512 1efc9bb0b39a6ea946df905d730a29bd69a03d7e3d63c9096de461d6c9a742cd55185c3deb74c9a7e35d29310463ff943ea0a44e21e6c4166c6407e5353fefda WHIRLPOOL 6f8234c0deda46278d93fcc4a96fb2f3906e04ecb9221975ca8e5dedefe87523528017a5e10cb644b320385e7eb01c5f8bf0b2cb14d3df3bf338cdccf0833054
+AUX nginx.initd 2152 SHA256 6053614d7f93145cc45563f5cb5ed37e5a1beb4e1d78ba9a95e57da917354a2b SHA512 d593662cbee002544ba9d307706ffde69cfb6c5a4da0088bddc63d466948c89f0cef0babcb0e82babe2317328a4dd6bcff6d5eb59820c2416c673a6b24d96413 WHIRLPOOL 7ef80aa049a8a748594a40c316dfbed0b67c785a2537174afe82be824bcfc93d3a7b48a9f1bed23af6a8aafd0bebdce38c8ee9e52011dfcd7a9f5917d49c68ba
 AUX nginx.logrotate 364 SHA256 9e3e090dfd10861d5f9b279e19113ce8d05caf9f33d488f6aabf9f19ac0cf925 SHA512 bdb56d90cfa163a9b22262c77d702cfa2319c0c61e3ce2cc2a0c099681bbd6a631a2e2f442ee28802e178799c592e5dd560f3bd33bf2c86d7ecf2b40a204746c WHIRLPOOL be1b76c1d51e6e597f9b441753dda3a943c31ccfb94f02a8da6edcd5c8f22b251df3086b6029101143beef0ca9c624d3ee709aca3e307ab0c910002931c1dc08
 DIST nginx-1.2.5.tar.gz 725368 SHA256 87392b8ebc3a763589bdf3f0578cad323bb4ddd327a84243eb4a8babbbd79ddd SHA512 1c943305fc86d56ca873b780eada9c51dd3a92da84f72c76f74253cf80b689f61f0cd48a75320e38352fb828465ab5e2b15790db20cc26a0663e5867d90dad4d WHIRLPOOL b6deb8f59b091c6d479fe5e48bf8b37789e874cf29826ac1bd8f121d5ed4e19a2299200a913e7cb2131f19d7c5ec7bfe851a5c4bbe4835d2482e3f3afea75481
 DIST nginx-1.3.8.tar.gz 738216 SHA256 8d68f9224f4616c987208bcb3a0bf1ae03740c5ec313b220f995ba50d826fe1c SHA512 c8a5795c576568f2cfa346f9282776d30a938982045bc7c30208efda8775e81d308c50d79008d08a36ef0f55edddd6f8f2b097119a25f40ff3afc217f79000a7 WHIRLPOOL 2f1e62c6f0f51311c8190bceab276b405e626492700a9466240a469921354d939f7d3da11fe936037b3ce4976514efbb054ebeaea8a0673d9e1ddf44ae029029
@@ -12,7 +12,7 @@ DIST ngx_http_headers_more-0.17.tar.gz 23324 SHA256 039b8296f3954748fcb86a80076a
 DIST ngx_http_lua-0.5.10.tar.gz 369553 SHA256 d8a2d91f4fb2792c55ecc2c7dcf24e40a1b795ac91e1f73d98b67d000b957ee6 SHA512 3a2088fb5a4da251afc8a500e3626035570f6fbf1bbd943e6ad1f7fa240ee849f07d4bd595a1d8d5137c3db7fcae1793e898efc286c10841b9179562ca60d7ed WHIRLPOOL 04ff8aec6c4de25a49b8394886e0c47a78a56cd4a0f6dac4018de9a474fdf1a1578ffedeede6dcd9bec3885c6296ba077ec9f34e33c3719a059155c6744026d5
 DIST ngx_http_upload_progress-0.9.0.tar.gz 17020 SHA256 3fb903dab595cf6656fa0fc5743a48daffbba2f6b5c554836be630800eaad4e2 SHA512 8b585609983b34a9f3fa39aa18b744be7109beee2e1892ec723deae0353fb366f700e58e120569b7ff364841d271d04b32a9022a0165e9f33e07a21437e1c0ca WHIRLPOOL 42aefc25e98cd0a8f48705638462927494a3b0bcbed1fb0ea7b33a6027a848950347d20d1b055211890ccf4be4f31c7e417614948adeec1272ea01c2e5f0d29a
 DIST ngx_slowfs_cache-1.9.tar.gz 11527 SHA256 7a2e07033550f3b594949a4392ac9a34e5583025ffea4e33e39a7f0d9fdc8b42 SHA512 4151ecd9272de332720de8b838fded1e7b192b2426683c3d7e49f67307603154076625b87a218b34609afd0d0fb0827f8a831b38c95cdc0f2a369aade663d25e WHIRLPOOL 24a4f5bb03563557ab1bc32bf82915c36017af3abe4e1ae2a92f1b688f189a3712bced7484d9786598dce0fc1ae7d80bceb184fc23ce9c2a130bc135b6e61a9b
-EBUILD nginx-1.2.5.ebuild 14006 SHA256 ac95b81ed2b8883daba1ace3af22836cf3c93a4208eda4384a9bb8c31e6d8fca SHA512 e3a913fe7ac07f9afc9f574884f5730842aa7a20ab6afa1654844c3c1381b297f0dfd49603dbc81a3e81c1c1e530bce3a03825d31273aa2ff17d67c37b778104 WHIRLPOOL e935fca42282a291135e996e11bc9bc938dab8286078e32a25996711711ae3abb61d091816e2b4f50268a47fd6654e00dbcdb6b38787e22bc2f0d62c0273a20e
-EBUILD nginx-1.3.8.ebuild 14015 SHA256 7c673d88f40ad7a73e6ab61e7d5e7c105351629fabefab2704ece53ba4079a52 SHA512 61913a0f3cd15dc521df0993ddd502d1770abcce53ab11a23637cb9d7b876acde868c902459552afbc726c612289ffd6c4c2ef11aa29ee12242e6b4b1e14b471 WHIRLPOOL e503848edda15fee1b3b702163e5d06b2008a8d63c1681579bd49d9df6e6af54d9b582dd4bd1c816a8070b7417527627626cd2bdb341bc7f1a6cf63806b7094a
-MISC ChangeLog 54993 SHA256 fad52154a175af8c2c44f618c945faf846a48b78f28ed8c61d8a6f43b94bebf0 SHA512 6bf3ff5fce18a1c56123a2bfdaa5f2a5dd347899e654541a4030c43204910c5df87731946b5c3e7e1dd46318110d4cdb7a70e930b51eee8063541cb232c6f247 WHIRLPOOL 439bc2728f0a02af7b84846aa6170748ed914648a833eba126b2c1fb38c9017dd710dd87853b67828b2c5e1557cb6f70966f3ae438aacaea19be57b2170768da
+EBUILD nginx-1.2.5.ebuild 13852 SHA256 9179b6205740262aaf67dd501982f26cf09264e2b04ec97e23de1d892c4d541d SHA512 2f60f8ff4ab97e08d8502077e77433d8ae26a6178a01f47180d83adf7964a905f808a143176f79cf3155566c9dc9b7d704b4552d498a318cd51daf65a116a3cc WHIRLPOOL 51fff4462d30e755f48142af3b282726defe11ca82b98f73c389634c43c3a14de9a9e77ceeda6e40e0282bb8ab24f5b927b1f187ff9b1d2ca608b1350a54e1b4
+EBUILD nginx-1.3.8.ebuild 13861 SHA256 704ef68f1ec405dd50107d35e70c9f5950ed21c13569fa478136d3d9afbe3e5d SHA512 7759a49ee6da3bbb1f8bdf0e1580f419de424134be72b6c0145c1208bebd3d68cdb607a4a253f55f5e1f0393aa4eacff9f8f0a1b37989f5efa2ee3bc8b67bc4b WHIRLPOOL 8a652283e70c3cc06887d348423535fa1b25ccc87b9e04772498b41a26fd47ef20f6cbe2b3d466009428bc0f8880f49766db6bf8110afe15d1f0159a6fdab100
+MISC ChangeLog 55119 SHA256 74d3e46054291107f61fc1b16bcc9e06398352e8839678592b61817de7db2722 SHA512 4f0cb5c364f3f2465001d14c1f7cdab7208deaba7eae1bc91b0f349b6a3102fc2d0e9bac57a0765f68e0253dd2f8e30b7c05e5ad4f571db732b87d35e60a5508 WHIRLPOOL 7c10d48bf8fe6b76f405f651170c7665c77a872377ba88ee7a6a99711346e70e5044a1a312c9b622a459979631c89c1c6fdf3afc78cd2ff2b5828044df06cb36
 MISC metadata.xml 827 SHA256 750fe1d3ad8a43f2772ba296a0bfd35259d32a1746847dfe4119a18d49c01397 SHA512 5248aaf2524123b68d6fd6b82bc58426d419801763d8dcb87b5a5b15475936daf0160f9e878db06307ede0ab215ba0b571a9ff39873f7a77c18780f31c92b0d0 WHIRLPOOL 70c74c2b920dc049b01038e89d7046d188cad9a8a60cbd52dd11db32fe34ca9b55e62ec0bf3ad32c7fb8b26e519a97dc38175f1be3ef5e24c3d55d76f6ed8d10
