@@ -1,6 +1,10 @@
 # ChangeLog for www-servers/nginx
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.336 2012/12/10 08:57:32 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.337 2012/12/20 08:11:46 hollow Exp $
+
+  20 Dec 2012; Benedikt Böhm <hollow@gentoo.org> nginx-1.2.5.ebuild,
+  nginx-1.3.8.ebuild, files/nginx.initd:
+  fix #446734
 
   10 Dec 2012; Benedikt Böhm <hollow@gentoo.org> -nginx-1.0.15.ebuild,
   -nginx-1.2.1.ebuild, nginx-1.2.5.ebuild, nginx-1.3.8.ebuild,
