@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Bio-Das
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Bio-Das/ChangeLog,v 1.33 2012/06/24 12:59:50 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Bio-Das/ChangeLog,v 1.34 2012/12/20 17:34:09 jlec Exp $
+
+  20 Dec 2012; Justin Lecher <jlec@gentoo.org> Bio-Das-1.170.0.ebuild:
+  Dropping ~ppc do to broken revdeps. If wanted please file a bug
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
